--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "react todo application with electron",
   "main": "main.js",
   "scripts": {
-    "start": "./node_modules/electron-prebuilt/dist/Electron.app/Contents/MacOS/Electron",
-    "watch": "./node_modules/.bin/webpack-dev-server",
-    "electron-rebuild": "./node_modules/.bin/electron-rebuild"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
   "repository": {
     "type": "git",
@@ -21,12 +19,16 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "css-loader": "^0.23.1",
     "electron-packager": "^7.3.0",
     "electron-rebuild": "^1.1.5",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "node-libs-browser": "^1.0.0",
+    "react-dom": "^15.2.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
