--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "dependencies": {
     "electron-prebuilt": "^1.2.7",
+    "express": "^4.14.0",
+    "mongodb": "^2.2.4",
     "react": "^15.2.1"
   }
 }
