--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-1": "^6.5.0",
     "css-loader": "^0.23.1",
     "electron-packager": "^7.3.0",
     "electron-rebuild": "^1.1.5",
@@ -34,9 +35,16 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "axios": "^0.13.1",
     "electron-prebuilt": "^1.2.7",
     "express": "^4.14.0",
     "mongodb": "^2.2.4",
-    "react": "^15.2.1"
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.0",
+    "redux": "^3.5.2",
+    "redux-form": "^5.3.1",
+    "redux-promise": "^0.5.3"
   }
 }
