--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "electron-prebuilt": "^1.2.7",
     "express": "^4.14.0",
     "mongodb": "^2.2.4",
+    "mongoose": "^4.5.7",
+    "mongoose-times": "^0.1.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
