--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "react todo application with electron",
   "main": "main.js",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "lint": "eslint src/actions src/components src/reducers --fix"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.11.4",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
@@ -26,9 +28,16 @@
     "css-loader": "^0.23.1",
     "electron-packager": "^7.3.0",
     "electron-rebuild": "^1.1.5",
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^1.5.5",
+    "eslint-plugin-react": "^5.2.2",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "node-libs-browser": "^1.0.0",
+    "pre-commit": "^1.1.3",
     "react-dom": "^15.2.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
