--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "lint": "eslint src/actions src/components src/reducers --fix"
   },
+  "precommit": [
+    "lint"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/janeefongg/react-todo-app.git"
