--- a/package.json
+++ b/package.json
@@ -48,15 +48,14 @@
   },
   "dependencies": {
     "axios": "^0.13.1",
+    "bluebird": "^3.4.1",
     "electron-prebuilt": "^1.2.7",
     "express": "^4.14.0",
-    "mongodb": "^2.2.4",
-    "mongoose": "^4.5.7",
-    "mongoose-times": "^0.1.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.0",
+    "redis": "^2.6.2",
     "redux": "^3.5.2",
     "redux-form": "^5.3.1",
     "redux-promise": "^0.5.3"
