--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "bluebird": "^3.4.1",
     "electron-prebuilt": "^1.2.7",
     "express": "^4.14.0",
+    "node-sass-middleware": "^0.9.8",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
