--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "node-libs-browser": "^1.0.0",
+    "node-sass": "^3.8.0",
     "pre-commit": "^1.1.3",
     "react-dom": "^15.2.1",
+    "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
@@ -51,7 +53,7 @@
     "bluebird": "^3.4.1",
     "electron-prebuilt": "^1.2.7",
     "express": "^4.14.0",
-    "node-sass-middleware": "^0.9.8",
+    "extract-text-webpack-plugin": "^1.0.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
