--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
   "dependencies": {
     "axios": "^0.13.1",
     "bluebird": "^3.4.1",
+    "body-parser": "^1.15.2",
     "electron-prebuilt": "^1.2.7",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "path": "^0.12.7",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
@@ -61,7 +63,7 @@
     "react-router-redux": "^4.0.5",
     "redis": "^2.6.2",
     "redux": "^3.5.2",
-    "redux-form": "^5.3.1",
+    "redux-form": "^5.3.2",
     "redux-promise": "^0.5.3"
   }
 }
