--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "axios": "^0.13.1",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
+    "cors": "^2.7.1",
     "electron-prebuilt": "^1.2.7",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
