--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
+    "babel-preset-stage-1": "^6.13.0",
     "babel-register": "6.8.0",
     "colors": "1.1.2",
     "compression": "1.6.1",
@@ -67,6 +68,7 @@
     "webpack-hot-middleware": "2.10.0"
   },
   "dependencies": {
+    "async": "^2.0.1",
     "axios": "^0.13.1",
     "babel-polyfill": "6.8.0",
     "bluebird": "^3.4.1",
@@ -85,7 +87,7 @@
     "redux": "^3.5.2",
     "redux-form": "^4.1.3",
     "redux-promise": "^0.5.3",
-    "redux-thunk": "2.0.1",
+    "redux-thunk": "^2.0.1",
     "toastr": "2.1.2"
   }
 }
