--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "path": "^0.12.7",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
+    "react-icons": "^2.2.1",
     "react-modal": "^1.4.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.0",
